# llm-text-splitter

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  input.txt  main.py  pyproject.toml
src/: LLMTextSplitter.py  TextSplitter.py
src/examples/: splitter.py
