[project]
name = "llm-text-splitter"
version = "0.1.0"
description = "Example usage of LLM Text Splitter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-openai>=0.1.0",
    "tiktoken>=0.12.0",
]
